fix:size not fit to window

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -3,24 +3,21 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
 
+}
 .topic {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 100vw;
+  justify-content: center; /* width: 100vw; */
   height: 20vh;
   margin-top: 5vh;
 }
-
 h1 {
   font-size: 2.5rem;
   font-weight: 700px;
   color: #183b56;
 }
-
 .line {
   background: linear-gradient(
     to bottom,
@@ -29,7 +26,6 @@ h1 {
     hsla(20, 100%, 64%, 1)
   );
 }
-
 h2 {
   font-weight: 600;
   font-size: 1.25rem;
@@ -39,7 +35,6 @@ h2 {
   top: 170px;
   left: 30px;
 }
-
 h4 {
   font-family: "DM Sans", sans-serif;
   color: #5a7184;
@@ -49,7 +44,6 @@ h4 {
   top: 210px;
   left: 30px;
 }
-
 h3 {
   position: absolute;
   font-weight: 500;
@@ -61,21 +55,17 @@ h3 {
   top: 80px;
   padding-left: 25px;
 }
-
 .categories {
-  max-width: 1900px;
-  min-width: 450px;
-  width: 100vw;
-  height: 50vh;
+  max-width: 100%;
+  min-width: auto;
+  width: 100%;
 }
-
 .row-1,
 .row-2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-
 .job-item,
 .job-more {
   position: relative;
@@ -86,12 +76,10 @@ h3 {
   border: 1px solid #ededed;
   border-radius: 8px;
 }
-
 .job-item:hover {
   background: rgba(179, 186, 197, 0.1);
   cursor: pointer;
 }
-
 .job-more {
   position: relative;
   cursor: pointer;
@@ -101,7 +89,6 @@ h3 {
   height: 268px;
   border-radius: 8px;
 }
-
 .icon {
   display: flex;
   align-items: center;
@@ -112,17 +99,13 @@ h3 {
   border: none;
   background-color: hsla(20, 100%, 64%, 0.1);
 }
-
 .icon2 {
   background-color: #ff8345;
 }
-
 .pic img {
   width: 40px;
   height: 40px;
-}
-
-/* arrow */
+} /* arrow */
 .arrow {
   position: absolute;
   top: 210px;
@@ -130,7 +113,6 @@ h3 {
   width: 32px;
   height: 32px;
 }
-
 .explore-more-arrow {
   position: absolute;
   width: 32px;
@@ -138,33 +120,59 @@ h3 {
   top: 130px;
   left: 242px;
 }
-
 .first-line {
   position: absolute;
   opacity: 0.5;
   bottom: 200px;
   left: 90px;
 }
-
 .second-line {
   position: absolute;
   opacity: 0.5;
   bottom: 160px;
   left: 50px;
 }
-
 .third-line {
   position: absolute;
   opacity: 0.5;
   top: 183px;
   left: 0px;
 }
-
 .fourth-line {
   position: absolute;
   opacity: 0.5;
   top: 230px;
   left: 0px;
+} /* Start coding here */
+html, body {
+  overflow-x: hidden;
+  width: 100%;
 }
-
-/* Start coding here */
+/* .job-item, .job-more {
+  margin: 20px auto;
+} */
+@media only screen and (max-width: 375px) {
+  
+  .categories {
+    max-width: 100%;
+    min-width: auto;
+    width: 100%; /* height: 50vh; */
+  }
+  .row-1,
+  .row-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .job-more {
+    position: relative;
+    overflow: hidden;
+    width: 280px;
+    height: 268px;
+    padding: 30px;
+    margin: 20px 30px;
+    border: 1px solid #ededed;
+    border-radius: 8px;
+  }
+}
